syntax = "proto3";

package todoproto;

message QueryFilter{
    uint64 page = 1;
    uint64 limit = 2;
    uint64 created_after = 3;
    uint64 created_before = 4;
    uint64 updated_after = 5;
    uint64 updated_before = 6;
    bool include_all = 7;
    string sort_by = 8;
}

message Pagination {
    uint64 page = 1;
    uint64 limit = 2;
    uint64 total_count = 3;
}
